# devops-skills

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/cicd-debug/.claude-plugin/: plugin.json
plugins/cicd-debug/skills/cicd-debug/: SKILL.md
plugins/docker-quick/.claude-plugin/: plugin.json
plugins/docker-quick/skills/docker-quick/: SKILL.md
plugins/iac-state/.claude-plugin/: plugin.json
plugins/iac-state/skills/iac-state/: SKILL.md
plugins/k8s-debug/.claude-plugin/: plugin.json
plugins/k8s-debug/skills/k8s-debug/: SKILL.md
plugins/log-aggregator/.claude-plugin/: plugin.json
plugins/log-aggregator/skills/log-aggregator/: SKILL.md
plugins/remote-debug/.claude-plugin/: plugin.json
plugins/remote-debug/skills/remote-debug/: SKILL.md
plugins/ssh-core/.claude-plugin/: plugin.json
plugins/ssh-core/skills/ssh-core/: SKILL.md
plugins/ssh-guarded/.claude-plugin/: plugin.json
tests/: README.md  test_compare_across_hosts_integration.py  test_compare_across_hosts_unit.py  test_compose_status_integration.py  test_compose_status_unit.py  test_diagnose_host_integration.py  test_diagnose_host_unit.py  test_image_audit_integration.py  test_image_audit_unit.py  test_inspect_container_integration.py  test_inspect_container_unit.py  test_manifests.py  test_port_check_integration.py  test_port_check_unit.py  test_ssh_cluster_integration.py  test_ssh_cluster_unit.py  test_ssh_core_lib.py  test_ssh_execute_integration.py  test_ssh_execute_unit.py  test_tail_log_integration.py  test_tail_log_unit.py
(+75 files in other folders)
