[project]
name = "devops-skills"
version = "0.1.0"
description = "Open-source DevOps & cross-device debugging skills for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "devops-skills contributors" }]
keywords = ["claude-code", "claude-plugin", "ssh", "devops", "remote-debugging"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Debuggers",
]

# Runtime dependencies live in each plugin's own future requirements.txt; the
# top-level project ships only manifests, markdown, and Python stubs, so the
# wheel itself has no runtime deps.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/BerBai/devops-skills"
Issues = "https://github.com/BerBai/devops-skills/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["E501", "PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "live_ssh: integration tests that ssh to a real host (default alias 'pai'). Skipped by default; run with `pytest -m live_ssh`. See tests/README.md for prerequisites.",
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugins"]
